# jax

./: .gitignore  CMakeLists.txt  test.jax  test.lox
include/: tinyformat.hpp  visit.hpp
src/: ast.cpp  compiler.cpp  compiler_functions.cpp  debug.cpp  main.cpp  natives.cpp  scanner.cpp  typecheck.cpp  value.cpp  vm.cpp  vmwriter.cpp
test/: array.jax  basic.jax  blocks.jax  for.jax  lambdas.jax  overloading.jax  static.jax
